Add /healthcheck handler. Fixes #96
